Have slideNumbers on speaker notes

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 				transition: 'convex',
 				history: true,
 				defaultTiming: 60,
+				slideNumber: 'c/t',
+				showSlideNumber: 'speaker',
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
