Split markdowns to make it a bit more manageable

--- a/index.html
+++ b/index.html
@@ -26,7 +26,31 @@
 <body>
 <div class="reveal">
     <div class="slides">
-        <section data-markdown="security.md"
+        <section data-markdown="intro.md"
+                 data-separator="^\===\n$"
+                 data-separator-vertical="^\nvvv\n$"
+                 data-separator-notes="^Note:$"
+                 data-charset="iso-8859-15">
+        </section>
+        <section data-markdown="people.md"
+                 data-separator="^\===\n$"
+                 data-separator-vertical="^\nvvv\n$"
+                 data-separator-notes="^Note:$"
+                 data-charset="iso-8859-15">
+        </section>
+        <section data-markdown="processes.md"
+                 data-separator="^\===\n$"
+                 data-separator-vertical="^\nvvv\n$"
+                 data-separator-notes="^Note:$"
+                 data-charset="iso-8859-15">
+        </section>
+        <section data-markdown="tools.md"
+                 data-separator="^\===\n$"
+                 data-separator-vertical="^\nvvv\n$"
+                 data-separator-notes="^Note:$"
+                 data-charset="iso-8859-15">
+        </section>
+        <section data-markdown="closing.md"
                  data-separator="^\===\n$"
                  data-separator-vertical="^\nvvv\n$"
                  data-separator-notes="^Note:$"
