Move markdown files to subdir

--- a/index.html
+++ b/index.html
@@ -26,31 +26,31 @@
 <body>
 <div class="reveal">
     <div class="slides">
-        <section data-markdown="intro.md"
+        <section data-markdown="md/intro.md"
                  data-separator="^\===\n$"
                  data-separator-vertical="^\nvvv\n$"
                  data-separator-notes="^Note:$"
                  data-charset="iso-8859-15">
         </section>
-        <section data-markdown="people.md"
+        <section data-markdown="md/people.md"
                  data-separator="^\===\n$"
                  data-separator-vertical="^\nvvv\n$"
                  data-separator-notes="^Note:$"
                  data-charset="iso-8859-15">
         </section>
-        <section data-markdown="processes.md"
+        <section data-markdown="md/processes.md"
                  data-separator="^\===\n$"
                  data-separator-vertical="^\nvvv\n$"
                  data-separator-notes="^Note:$"
                  data-charset="iso-8859-15">
         </section>
-        <section data-markdown="tools.md"
+        <section data-markdown="md/tools.md"
                  data-separator="^\===\n$"
                  data-separator-vertical="^\nvvv\n$"
                  data-separator-notes="^Note:$"
                  data-charset="iso-8859-15">
         </section>
-        <section data-markdown="closing.md"
+        <section data-markdown="md/closing.md"
                  data-separator="^\===\n$"
                  data-separator-vertical="^\nvvv\n$"
                  data-separator-notes="^Note:$"
