More fine-tuning

--- a/index.html
+++ b/index.html
@@ -30,31 +30,37 @@
                  data-separator="^\===\n$"
                  data-separator-vertical="^\nvvv\n$"
                  data-separator-notes="^Note:$"
-                 data-charset="iso-8859-15">
+                 data-charset="iso-8859-15"
+                 data-background-image="/images/sdballs.png" data-background-opacity="0.05" data-background-size="30%" data-background-position="25% 25%">
         </section>
         <section data-markdown="md/people.md"
                  data-separator="^\===\n$"
                  data-separator-vertical="^\nvvv\n$"
                  data-separator-notes="^Note:$"
-                 data-charset="iso-8859-15">
+                 data-charset="iso-8859-15"
+                 data-background-image="/images/sdballs.png" data-background-opacity="0.05" data-background-size="30%" data-background-position="25% 25%">
         </section>
         <section data-markdown="md/processes.md"
                  data-separator="^\===\n$"
                  data-separator-vertical="^\nvvv\n$"
                  data-separator-notes="^Note:$"
-                 data-charset="iso-8859-15">
+                 data-charset="iso-8859-15"
+                 data-background-image="/images/sdballs.png" data-background-opacity="0.05" data-background-size="30%" data-background-position="25% 25%">
         </section>
         <section data-markdown="md/tools.md"
                  data-separator="^\===\n$"
                  data-separator-vertical="^\nvvv\n$"
                  data-separator-notes="^Note:$"
-                 data-charset="iso-8859-15">
+                 data-charset="iso-8859-15"
+                 data-background-image="/images/sdballs.png" data-background-opacity="0.05" data-background-size="30%" data-background-position="25% 25%">
+
         </section>
         <section data-markdown="md/closing.md"
                  data-separator="^\===\n$"
                  data-separator-vertical="^\nvvv\n$"
                  data-separator-notes="^Note:$"
-                 data-charset="iso-8859-15">
+                 data-charset="iso-8859-15"
+                 data-background-image="/images/sdballs.png" data-background-opacity="0.05" data-background-size="30%" data-background-position="25% 25%">
         </section>
     </div>
 </div>
@@ -83,7 +89,7 @@
 <div id="hidden" style="display:none;">
     <div id="header">
         <!--<div id="header-left">HEADER-LEFT</div>-->
-        <div id="header-right"><img src="images/logo_sdb.png" style="opacity: 0.2;"/></div>
+<!--        <div id="header-right"><img src="images/logo_sdb.png" style="opacity: 0.2;"/></div>-->
         <div id="footer-left"><img width="26" height="26" src="images/icons8-twitter.svg"/><small class="handle">@coduinix</small></div>
     </div>
 </div>
