--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div id="header">
         <!--<div id="header-left">HEADER-LEFT</div>-->
 <!--        <div id="header-right"><img src="images/logo_sdb.png" style="opacity: 0.2;"/></div>-->
-        <div id="footer-left"><img width="26" height="26" src="images/icons8-twitter.svg"/><small class="handle">@coduinix</small></div>
+        <div id="footer-left"><img style="width:3.25vh; height:3.25vh;" src="images/icons8-twitter.svg"/><small class="handle">@coduinix</small></div>
     </div>
 </div>
 <script src="js/jquery-2.2.4.min.js"></script>
