Use relative path for images

--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
                  data-separator-vertical="^\nvvv\n$"
                  data-separator-notes="^Note:$"
                  data-charset="iso-8859-15"
-                 data-background-image="/images/sdballs.png" data-background-opacity="0.05" data-background-size="30%" data-background-position="25% 25%">
+                 data-background-image="images/sdballs.png" data-background-opacity="0.05" data-background-size="30%" data-background-position="25% 25%">
         </section>
         <section data-markdown="md/people.md"
                  data-separator="^\===\n$"
                  data-separator-vertical="^\nvvv\n$"
                  data-separator-notes="^Note:$"
                  data-charset="iso-8859-15"
-                 data-background-image="/images/sdballs.png" data-background-opacity="0.05" data-background-size="30%" data-background-position="25% 25%">
+                 data-background-image="images/sdballs.png" data-background-opacity="0.05" data-background-size="30%" data-background-position="25% 25%">
         </section>
         <section data-markdown="md/processes.md"
                  data-separator="^\===\n$"
                  data-separator-vertical="^\nvvv\n$"
                  data-separator-notes="^Note:$"
                  data-charset="iso-8859-15"
-                 data-background-image="/images/sdballs.png" data-background-opacity="0.05" data-background-size="30%" data-background-position="25% 25%">
+                 data-background-image="images/sdballs.png" data-background-opacity="0.05" data-background-size="30%" data-background-position="25% 25%">
         </section>
         <section data-markdown="md/tools.md"
                  data-separator="^\===\n$"
                  data-separator-vertical="^\nvvv\n$"
                  data-separator-notes="^Note:$"
                  data-charset="iso-8859-15"
-                 data-background-image="/images/sdballs.png" data-background-opacity="0.05" data-background-size="30%" data-background-position="25% 25%">
+                 data-background-image="images/sdballs.png" data-background-opacity="0.05" data-background-size="30%" data-background-position="25% 25%">
 
         </section>
         <section data-markdown="md/closing.md"
@@ -60,7 +60,7 @@
                  data-separator-vertical="^\nvvv\n$"
                  data-separator-notes="^Note:$"
                  data-charset="iso-8859-15"
-                 data-background-image="/images/sdballs.png" data-background-opacity="0.05" data-background-size="30%" data-background-position="25% 25%">
+                 data-background-image="images/sdballs.png" data-background-opacity="0.05" data-background-size="30%" data-background-position="25% 25%">
         </section>
     </div>
 </div>
